name:           cgidoc
version:        0.1
description:    Run pandoc under fastcgi
author:         Dylan Simon
maintainer:     dylan@dylex.net
copyright:      2018 Dylan Simon, Flatiron Institute
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

executable cgidoc
  main-is: Main.hs
  other-modules:
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall -threaded
  build-depends:
      base >= 4.7 && < 5
    , attoparsec
    , blaze-html
    , bytestring
    , http-media
    , http-types
    , mtl
    , pandoc
    , posix-paths
    , text
    , time
    , unix
    , wai
    , wai-handler-fastcgi
    , waimwork
