name:           cgidoc
version:        0.1
description:    Build directory indexes and render documents under pandoc for static web servers through fastcgi
author:         Dylan Simon
maintainer:     dylan@dylex.net
copyright:      2018-2021 Dylan Simon, Flatiron Institute
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

executable cgidoc
  main-is: Main.hs
  other-modules:
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -O -Wall -threaded
  build-depends:
      base >= 4.7 && < 5
    , attoparsec
    , blaze-html
    , bytestring
    , case-insensitive
    , http-media
    , http-types
    , mtl
    , network
    , pandoc
    , posix-paths
    , text
    , time
    , unix
    , wai
    , wai-extra
    , warp
    , waimwork
